--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>look mama hey github</h2>
+    <h2>look mama hey githubgit init</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, dolorum? Velit aperiam error sapiente quo consequatur excepturi, incidunt consectetur repellendus tempora laboriosam quidem recusandae fuga odio aliquid molestias illo omnis!</p>
 </body>
 </html>
