--- a/index.html
+++ b/index.html
@@ -4,10 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Maknun Khan</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>look mama hey githubgit init</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, dolorum? Velit aperiam error sapiente quo consequatur excepturi, incidunt consectetur repellendus tempora laboriosam quidem recusandae fuga odio aliquid molestias illo omnis!</p>
+    
+    <section class="top-banner">
+
+        <div class="half-width">
+            <h1>Welcome To</h1>
+        <h1> <span class="orange-highlight"> Maknun Khan </span>World</h1>
+        <h3>Build Climber and Train Stopper </h3>
+        <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+        <a  class="hire-me" target="_blank" href="https://www.linkedin.com/in/nur-mohammod-khan-maknun/">Hire Me</a>
+
+        </div>
+        <div class="half-width">
+            <img src="images/mk.jpg" alt="">
+
+        </div>
+        
+    </section>
+
+    <section class="dream-area">
+        <div class="half-width">
+
+            <img src="images/mak.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become a Web Developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a  class="hire-me" target="_blank" href="https://www.linkedin.com/in/nur-mohammod-khan-maknun/">Download Resumue</a>
+
+        </div>
+    </section>
+
+    <section class="experience-area">
+        <h2 class="ex-text">Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+
+            <h2>Full Stack</h2>
+            <h4 class="orange-highlight">2021 Present | Pro Level Developer</h4>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+
+            <h2>Baby Web Dev</h2>
+            <h4 class="orange-highlight">2020-2021 | Programming Hero Learner</h4>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+
+    </section>
+
+    <footer>
+        <p>© Maknun Khan 2021, Copy-rights reserved.</p>
+    </footer>
+   
+  
+
+
 </body>
 </html>
